finally got the routing to work

--- a/src/scss/_page-header.scss
+++ b/src/scss/_page-header.scss
@@ -2,14 +2,11 @@
     text-align: center;
     padding: 3rem 0;
     gap: 1rem;
+    background-color: rgb(73, 150, 114);
     ul{
         font-size: 1rem;
     }
     
-    button{
-        background-color: cornflowerblue;
-        margin: 1rem;
-    }
 }
 .title{
     font-size: 4rem;
