--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,8 +1,7 @@
 %ui-base{
-    background-color: rgb(145, 102, 64);
-    font-size: 3rem;
-    padding: 4rem 0;
-    text-align: center;
+    background-color: rgb(32, 111, 163);
+    margin: auto;
+    padding: 2rem;
 }
 
 .ui-header{
@@ -13,4 +12,18 @@
 .ui-small-header{
     @extend %ui-base;
     font-size: 1rem;
+}
+
+
+a {
+    background-color: red;
+    color: black;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.ui-tagline{
+    font-size: 3rem;
 }
