--- a/src/scss/header.css
+++ b/src/scss/header.css
@@ -1,15 +1,12 @@
-.ui-small-header, .ui-header {
+.ui-tagline, .ui-header {
   background-color: #206fa3;
   margin: auto;
   padding: 2rem;
+  max-width: 320px;
 }
 
 .ui-header {
-  font-size: 4rem;
-}
-
-.ui-small-header {
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 a {
@@ -23,6 +20,62 @@ a {
 }
 
 .ui-tagline {
-  font-size: 3rem;
+  font-size: rem;
+}
+
+.todos {
+  font-size: 1.3rem;
+}
+
+.plans {
+  background-color: orange;
+  font-size: 2rem;
+}
+
+li {
+  list-style-type: none;
+  padding: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: grey;
+  border-left: 5px solid khaki;
+  padding: 0 1rem;
+}
+
+li h3, li p {
+  margin: 1rem;
+}
+
+.ui-button {
+  background-color: blue;
+  color: black;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 2rem;
+  margin: 1rem;
+}
+
+.delete {
+  background-color: rosybrown;
+  color: black;
+  padding: 7px 13px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.edit {
+  background-color: royalblue;
+  color: black;
+  padding: 7px 13px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
 }
 /*# sourceMappingURL=header.css.map */
