--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,16 +2,12 @@
     background-color: rgb(32, 111, 163);
     margin: auto;
     padding: 2rem;
+    max-width: 320px;
 }
 
 .ui-header{
     @extend %ui-base;
-    font-size: 4rem;
-}
-
-.ui-small-header{
-    @extend %ui-base;
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
 
@@ -26,5 +22,60 @@ a {
 }
 
 .ui-tagline{
-    font-size: 3rem;
+    @extend %ui-base;
+    font-size: rem;
 }
+
+.todos {
+    font-size: 1.3rem;
+}
+
+.plans {
+    background-color: orange;
+    font-size: 2rem;
+
+}
+
+li {
+    list-style-type: none;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    background-color: grey;
+    border-left: 5px solid khaki;
+    padding: 0 1rem;
+}
+
+li h3, li p{
+    margin: 1rem;
+}
+
+.ui-button{
+    background-color: blue;
+    color: black;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 2rem;
+    margin: 1rem;
+}
+
+.delete{
+    background-color:rosybrown;
+    color: black;
+    padding: 7px 13px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.edit{
+    background-color: royalblue;
+    color: black;
+    padding: 7px 13px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
