--- a/src/scss/_page-header.scss
+++ b/src/scss/_page-header.scss
@@ -2,7 +2,7 @@
     text-align: center;
     padding: 3rem 0;
     gap: 1rem;
-    background-color: rgb(73, 150, 114);
+    
     ul{
         font-size: 1rem;
     }
@@ -10,6 +10,10 @@
 }
 .title{
     font-size: 4rem;
+}
+
+body{
+    background-color: rgb(107, 83, 83);
 }
 
  
