--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -84,18 +84,6 @@ li {
 //     margin: 1rem;
 // }
 
-.ui-button{
-    
-    background-color: rgb(15, 75, 15);
-    color: black;
-    padding: 1rem;
-    border: 2px solid black;
-    border-radius: 5px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 1rem;
-}
-
 .delete{
     background-color:rosybrown;
     color: black;
@@ -116,5 +104,31 @@ li {
     text-align: center;
     text-decoration: none;
     display: inline-block;
+}
+
+.edit-form{
+    max-width: 360px;
+    margin:auto;
+    label{
+        margin:auto;
+    }
+    input {
+        margin-bottom: 1rem;
+    }
+    color: gray;
+    background-color: rgb(85, 22, 22);
+}
+
+.add-form{
+    max-width: 360px;
+    margin:auto;
+    label{
+        margin:auto;
+    }
+    input {
+        margin-bottom: 1rem;
+    }
+    color: gray;
+    background-color: rgb(85, 22, 22);
 }
 
